mysql-php-pod/mysql-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-php-service
  labels:
    app: mysql-phpmyadmin
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31111
  selector:
    app: mysql-phpmyadmin
